--- a/README
+++ b/README
@@ -23,3 +23,9 @@ python manage.py runserver
 
 
 -----------------------
+
+#TODO 
+
+1. Refazer o codigo de contruir o caminho.
+2. Estilizar e deixar o site em si responsivo.(ganhar pontos extras)
+3. Utilizar alguma bilbioteca de desenhar grafo.
